=====================
TextWiser CHANGELOG
=====================

-------------------------------------------------------------------------------
Mar 03, 2022 1.4.0
-------------------------------------------------------------------------------
major:
- Update UMAP to return deterministic output in latest version
- Update SVD to return deterministic output

minor:
- Disable non-relevant transformers warning
- Add full requirement install option

-------------------------------------------------------------------------------
Feb 23, 2022 1.3.2
-------------------------------------------------------------------------------
minor:
- Added upper bound for flair (less or equal to 0.9) to pass python3.9 unit tests

-------------------------------------------------------------------------------
Jan 21, 2021 1.3.1
-------------------------------------------------------------------------------
minor:
- Updated dependency requirements to reflect updates to Flair library

-------------------------------------------------------------------------------
Jul 22, 2020 1.3.0
-------------------------------------------------------------------------------
major:
- Added T5, XLM-RoBERTa, BART, ECELTRA, DialoGPT, Longformer embeddings
- Added inline pooling for Word embeddings to make some pooling scenarios faster

minor:
- Updated basic usage notebook
- Updated preferred method of persistence & examples
- SVD now properly appears in model parameters and can be fine-tuned

-------------------------------------------------------------------------------
Mar 12, 2020 1.2.1
-------------------------------------------------------------------------------

minor:
- Fix transformers model initialization for newer versions of transformers

-------------------------------------------------------------------------------
Feb 13, 2020 1.2.0
-------------------------------------------------------------------------------
major:
- Update Universal Sentence Encoder
  - Now works with newer versions