@@ -1,4 +1,5 @@
-flair>=0.6.1,<=0.9
+flair>=0.9
+gensim>=4.0
 scikit-learn>=0.23.2
 torch>=1.1.0
-transformers
+transformers>=4.0
