@@ -8,10 +8,12 @@ Mar 03, 2022 1.4.0
 major:
 - Update UMAP to return deterministic output in latest version
 - Update SVD to return deterministic output
+- Update Word2Vec and Doc2Vec with latest gensim training
 
 minor:
 - Disable non-relevant transformers warning
-- Add full requirement install option
+- Add full requirement install option (see full_requirements.txt)
+- Make gensim requirement explicit instead of relying on flair's dependency tree
 
 -------------------------------------------------------------------------------
 Feb 23, 2022 1.3.2
